[package]
name = "rsweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rsweb"
path = "src/lib.rs"
crate-type = ["lib"]
required-features = []
doc = true

[[bin]]
name = "rsweb-bin"
path = "src/bin/rsweb.rs"
doc = false

[dependencies]
btui = "0.6.12"
chrono = "0.4"
