[package]
name = "rsweb"
version = "0.2.0"
edition = "2021"
authors = ["Moritz Sokoll <moritz@sokoll.com>"]
license = "MIT"
homepage = "https://gitlab.sokoll.com/moritz/rsweb"
repository = "https://gitlab.sokoll.com/moritz/rsweb"
documentation = "https://docs.rs/rsweb"
readme = "README.md"
description = "library for creating multithreaded web servers in rust"

[lib]
name = "rsweb"
path = "src/lib.rs"
crate-type = ["lib"]
required-features = []
doc = true

[[bin]]
name = "rsweb-bin"
path = "src/bin/rsweb.rs"
doc = false

[dependencies]
btui = "0.6.12"
chrono = "0.4"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
